# blog_project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
blog-cli/: Cargo.toml  test_cli.sh
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/examples/: grpc_full_test.rs  grpc_simple_test.rs  grpc_test_runner.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  models.rs
blog-server/: .env.example  Cargo.toml  build.rs
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  jwt.rs  logging.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: api.rs  app.rs  lib.rs  models.rs
