[workspace]
resolver = "2"
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

[workspace.dependencies]
# Веб-фреймворки
axum = "0.8"
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# База данных
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.43", features = ["full"] }

# Утилиты
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1.16", features = ["v4", "serde"] }

# Веб-клиенты
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }

# WASM зависимости
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
js-sys = "0.3.77"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4"

# Для CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Дополнительные утилиты
futures = "0.3"
dotenv = "0.15"
env_logger = "0.11"

# Криптография для JWT
jsonwebtoken = "9.3"
bcrypt = "0.17"

# Транзитивные зависимости
itertools = "0.14"
petgraph = "0.7"
fixedbitset = "0.5"
either = "1.15"
hashbrown = "0.15"
indexmap = "2.7"