[package]
name = "blog-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
# HTTP клиент
reqwest = { workspace = true, features = ["json"]}

# gRPC клиент
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# HTTP типы для ошибок URI
http = "1.2"


# Утилиты
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

# Для async
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }