[package]
name = "blog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP сервер
actix-web = "4.8"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
async-trait = "0.1"

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# База данных
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json"
]}
dotenvy = "0.15"
tokio = { workspace = true, features = ["full"] }

# JWT и безопасность
jsonwebtoken = "9.3"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
rand_core = "0.6"

# Утилиты
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }



[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
serial_test = "3.0"
actix-rt = "2.9"

