[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew фреймворк
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }

# Веб-API
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Event",
    "EventTarget",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebSocket",
] }

gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"
gloo-utils = "0.2"
gloo-console = "0.3"

# Сериализация
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Логирование и отладка
getrandom = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }

# Утилиты
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }